# Raspberry-Dashboard

./: .gitignore  CMakeLists.txt  README.md  angular.json  auth.js  config.json.example  connection.py  index.js  logs.txt  main.cpp  package-lock.json  package.json  requirements.txt  style.css
app/: db.sqlite3
app/app/: settings.py  urls.py
app/home/: index.html  views.py
assets/js/: console.js  editor.js  material-dashboard.min.js
assets/scss/: material-dashboard.scss
assets/scss/material-dashboard/: theme.scss
backend/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  userdb
backend/src/: main.cpp
frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: styles.css
prisma/: schema.prisma
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  auth.service.ts
static/: about.css  console.css  edit.css  editor.css  index.css  logs.css  material-dashboard.css  material-dashboard.min.css  protocols.css  style.css  user.css  verify.css
views/: 403.ejs  404.ejs  about.ejs  console.ejs  dashboard.ejs  ec2.ejs  edit.ejs  editor.ejs  error.ejs  explicit.ejs  home.ejs  index.ejs  jesterbot.ejs  login.ejs  logs.ejs  offline.ejs  processes.ejs  protocols.ejs  signin.ejs  statistics.ejs  stealthybot.ejs  storage.ejs  usage.ejs  user.ejs  users.ejs  verify.ejs
views/logs/: messages.ejs  network.ejs  processes.ejs  usage.ejs
views/processes/: dashboard.ejs  jesterbot.ejs  pizzahat.ejs  stealthybot.ejs
(+35 files in other folders)
